# event_emin_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/event_emin_ros/: event_emin_ros.h
launch/: bag_global_motion.launch  davis_global_motion.launch  global_motion.launch
msg/: Vars.msg
src/: affinity_node.cpp  event_emin_ros.cpp  isometry_node.cpp  rotation_node.cpp  similarity_node.cpp  translation2d_node.cpp
